--- a/HW9/wind.html
+++ b/HW9/wind.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar">
 		<ul class="nav navbar-nav navbar-left">
-			  <li class="left"><a href="#">Latitude</a> </li>
+			  <li class="left"><a href="index.html">Latitude</a> </li>
 		</ul>	
 		<ul class="nav navbar-nav navbar-right">
 			  <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Plots <span class="caret"></span></a>
@@ -24,7 +24,7 @@
 					<li><a href="wind.html">Wind Speed</a></li>
 				</ul>
 			  <li> <a href="comparison.html">Comparison</a> </li>
-			  <li> <a href="data.html">Data</a> </li>
+			  <li> <a href="#">Data</a> </li>
 		</ul>
 	</nav>
 	 
@@ -33,9 +33,9 @@
       <section class="row">
         <div class="col-md-6">
           <article class="description-content">
-            <h1 class="description-header">Summary: Latitude vs. X</h1>
+            <h1 class="description-header">Wind Speed</h1>
             <hr class="description-hr"/>
- 			<img src="assets/images/Fig1.png" alt="" id="description-image"/>
+ 			<img src="assets/images/Fig4.png" alt="" id="description-image"/>
           </article>
         </div>
   
