--- a/HW9/cloudiness.html
+++ b/HW9/cloudiness.html
@@ -24,7 +24,7 @@
 					<li><a href="wind.html">Wind Speed</a></li>
 				</ul>
 			  <li> <a href="comparison.html">Comparison</a> </li>
-			  <li> <a href="#">Data</a> </li>
+			  <li> <a href="data.html">Data</a> </li>
 		</ul>
 	</nav>
 	 
