--- a/HW9/comparison.html
+++ b/HW9/comparison.html
@@ -23,8 +23,8 @@
 					<li><a href="cloudiness.html">Cloudiness</a></li>
 					<li><a href="wind.html">Wind Speed</a></li>
 				</ul>
-			  <li> <a href="#">Comparison</a> </li>
-			  <li> <a href="#">Data</a> </li>
+			  <li> <a href="comparison.html">Comparison</a> </li>
+			  <li> <a href="data.html">Data</a> </li>
 		</ul>
 	</nav>
 	 
